crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-5.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-5 = """val\Ugggggggg"""
  |                            ^
too few unicode value digits, expected unicode hexadecimal value
